--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -15,7 +15,7 @@
 //</Иконочные шрифты>==========================================================================================
 
 //<Шрифт по умолчанию>==========================================================================================
-$fontFamily: "";
+$fontFamily: "Lato";
 $fontSize: 16;
 $fontWeight: 400;
 //</Шрифт по умолчанию>==========================================================================================
