--- a/#src/scss/forms.scss
+++ b/#src/scss/forms.scss
@@ -24,14 +24,15 @@
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	padding: 10px 25px;
+	padding: 13px 25px;
 	// min-width: 144px;
 	// min-height: 36px;
-	font-size: 12px;
+	font-size: 14px;
 	font-weight: 400;
 	color: #000;
-	background: #FFE417;
-	border-radius: 5px;
+	background: #f7eae4;
+	border-radius: 8px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
 	&:hover {}
 
