--- a/#src/scss/forms.scss
+++ b/#src/scss/forms.scss
@@ -33,6 +33,7 @@
 	background: #f7eae4;
 	border-radius: 8px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+	transition: all 0.3s ease 0s;
 
 	&:hover {}
 
