--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,56 +1,53 @@
 .footer {
-  padding: 30px 0;
-  background: #86A298;
-  // .footer__container
-  &__container {
-    display: flex;
-    align-items: center; 
-  }
-  // .footer__row
-  &__row {
-    width: 100%;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-  // .footer__logo
-  &__logo {}
-  // .footer__menu
-  &__menu {}
-  // .footer__item 
-  &__menu-item {
-    margin-bottom: 10px;
-      &:last-child {
-        margin-bottom: 0;
-      }
-  }
-  // .footer__link
-  &__menu-item-link {}
-  // .footer__contact
-  &__contact {}
-  // .footer__form
-  &__form {
-    flex: 0 1 393px;
-  }
-  // .footer__form-title
-  &__form-title {
-    margin-bottom: 28px;
-  }
-  // .footer__form-input
-  &__form-input {
-    margin-bottom: 22px;
-  }
-  // .footer__form-btn
-  &__form-btn {
-      width: 225px;
-      height: 37px;
-      font-size: 18.5px;
-      background: #FCA01F;
-  }
+	padding: 30px 0;
+	background: #575556;
+
+	// .footer__container
+	&__container {
+		display: flex;
+		align-items: center;
+	}
+
+	// .footer__row
+	&__row {
+		width: 100%;
+		flex-direction: column;
+		align-items: center;
+		color: #fff;
+	}
 }
 
+.footer__menu {
+	align-items: center;
+	margin-bottom: 20px;
+}
 
+.footer__menu-item {
+	font-weight: 300;
 
+	&::before {
+		content: '/';
+		float: left;
+		margin: 0 10px;
+	}
 
+	&:first-child {
+		&::before {
+			display: none;
+		}
+	}
+}
 
+.footer__menu-item-link {
+	color: #fff;
+	font-weight: 300;
+	transition: all 0.3s ease 0s;
 
+	&:hover {
+		opacity: 0.7;
+	}
+}
 
+.footer__policy {
+	font-weight: 300;
+}
