--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -166,8 +166,17 @@ h4 {
 //<ОСНОВНОЙ БЛОК>====================================================================================================
 .page {
 	flex: 1 1 auto;
-	// padding: 35px 0; 
+	// padding: 35px 0;
 	// padding-top: 80px;
+	padding-bottom: 35px;
+}
+
+.page__inner {
+	._container {
+		display: flex;
+		justify-content: space-between;
+	}
+
 }
 
 .section {
@@ -176,18 +185,39 @@ h4 {
 
 //===================================================================================================================================
 
-.main-banner {
-	padding: 150px 0;
-	min-height: 600px;
-	background-repeat: no-repeat;
-	background-position: 0 0;
-	background-size: cover;
-	background-image: url('../img/main-banner');
+.page-index__main-content {}
+
+.main-content {
+	flex: 1 1 auto;
+	border: 1px solid #000;
+	height: 800px;
 }
 
-.main-banner__title {}
+.page-index__sidebar {
+	margin-left: 30px;
+}
 
-.main-banner__subtitle {}
+.sidebar {
+	flex: 0 0 26%;
+	border: 1px solid red;
+}
+
+//========================================================================================================================================================
+
+.banner {
+	display: block;
+	height: 100px;
+	border-radius: 15px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	overflow: hidden;
+	border: 1px solid green;
+}
+
+.banner-index {
+	background-image: url('../img/main-banner');
+}
 
 //========================================================================================================================================================
 
