--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -25,18 +25,12 @@
 	max-width: 250px;
 	width: 100%;
 	flex: 0 1 250px;
-	/* height: 70px; */
-	border: 1px solid #000;
-	padding-bottom: 6%;
+	// /* height: 70px; */
 
-	&:before {
-		content: '';
-		float: left;
+	svg {
+		width: 100%;
 		flex: 0 0 100%;
 		height: 100%;
-		background-size: 100%;
-		background-position: center;
-		background-repeat: no-repeat;
 	}
 }
 
