--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -62,21 +62,19 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		flex: 0 0 60px;
-		width: 60px;
-		height: 600px;
+		flex: 0 0 67px;
+		width: 67px;
+		height: 67px;
 		border-radius: 50%;
 		margin-bottom: 10px;
 		background-color: #e20612;
+		box-shadow: -17px 15px 35px -20px #000000;
 
-		&::before {
-			content: '';
-			float: left;
-			flex: 0 0 35px;
-			width: 35px;
-			height: 35px;
-			border: 1px solid #fff;
-			border-radius: 50%;
+		svg {
+			flex: 0 0 32.09px;
+			width: 32.09px;
+			height: 27px;
+			// transform: translateX(-2px);
 		}
 	}
 
