--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -356,7 +356,6 @@ h4 {
 	border-radius: 12.45px;
 	background: #f4f4f4;
 	overflow: hidden;
-	height: 430px;
 }
 
 .poster__title {
@@ -495,6 +494,98 @@ h4 {
 		margin-bottom: 0;
 	}
 
+}
+
+//========================================================================================================================================================
+
+.poster__scoreboard {
+	margin-bottom: 23px;
+}
+
+.scoreboard {
+	display: inline-flex;
+	align-items: center;
+	width: 100%;
+	height: 40.4px;
+	border-radius: 10.07px;
+	background: #fff;
+	border: 0.5px solid #d9000d;
+	overflow: hidden;
+	padding: 10px 16px;
+}
+
+.scoreboard__text {
+	font-size: 16px;
+	line-height: 30px;
+}
+
+.poster__table {}
+
+.table-poster {}
+
+.table-poster__row {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 3px 0;
+	border-bottom: 0.5px solid #8c8b8b;
+
+	&:last-child {
+		border-bottom: none;
+	}
+}
+
+.table-poster__col {
+	display: flex;
+	align-items: center;
+	// flex: 0 1 33.333%;
+	font-size: 16px;
+	line-height: 31px;
+	margin-right: 30px;
+	flex: 1;
+
+	&:first-child {
+		flex: 1 1 auto;
+	}
+
+	&:last-child {
+		margin-right: 0;
+	}
+}
+
+.table-poster__name {}
+
+.table-poster__value {
+	display: flex;
+	align-items: center;
+	white-space: nowrap;
+}
+
+.table-poster__indicator {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 8px;
+	height: 8px;
+	flex: 0 0 8px;
+	border-radius: 50%;
+	overflow: hidden;
+	background-color: #8C8B8B;
+	margin-right: 12px;
+
+	&.--red {
+		background-color: #D9000D;
+	}
+
+	&.--green {
+		background-color: #227C26;
+	}
+}
+
+.table-poster__time {}
+
+.--opacity {
+	opacity: 0;
 }
 
 //========================================================================================================================================================
