--- a/#src/scss/popup.scss
+++ b/#src/scss/popup.scss
@@ -44,7 +44,7 @@
 		}
 
 		.popup__body {
-			border-radius: 5px;
+			border-radius: 13.64px;
 			transform: scale(1);
 			transition: all 0.3s ease 0.2s;
 		}
@@ -65,7 +65,7 @@
 		max-width: 800px;
 		width: 100%;
 		// padding: 50px;
-		background: #EBEFE2;
+		background: #f4f4f4;
 		transform: scale(0);
 		transition: all 0.3s ease 0s;
 		overflow: hidden;
@@ -104,9 +104,8 @@
 
 .popup__form-input {
 	height: 46px;
-	background: #F6F8F1;
+	background: #f7eae4;
 	border: 1px solid #737373;
-	;
 	margin-bottom: 25px;
 }
 
@@ -116,7 +115,16 @@
 
 .popup__form-btn {
 	font-size: 18px;
-	min-width: 160px;
+	// min-width: 160px;
+	width: 100%;
+	padding: 10px 25px;
+	transition: all 0.3s ease 0s;
+
+	@media (min-width: 1024px) {
+		&:hover {
+			opacity: 0.7;
+		}
+	}
 }
 
 //====================================================================================================
