--- a/#src/scss/forms.scss
+++ b/#src/scss/forms.scss
@@ -276,9 +276,15 @@ textarea {
 	padding: 0px 15px;
 	border-radius: 5px;
 	border: 1px solid #000;
+	background-color: #fff;
+	transition: all 0.3s ease 0s;
 
 	&._focus {
-		background: grey;
+		@media (min-width: 1024px) {
+			&:hover {
+				opacity: 0.7;
+			}
+		}
 	}
 
 	&._error {
