--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -245,6 +245,16 @@ h4 {
 	overflow: hidden;
 	border-radius: 12.37px;
 	padding-bottom: 56%;
+
+	img {
+		transition: all 0.8s ease 0s;
+
+		@media (any-hover: hover) {
+			&:hover {
+				transform: scale(1.03);
+			}
+		}
+	}
 }
 
 ._ibg {}
@@ -304,6 +314,13 @@ h4 {
 	border-radius: 12.37px;
 	background: #f5e4dc;
 	overflow: hidden;
+	transition: all 0.3s ease 0s;
+
+	// @media (any-hover: hover) {
+	// 	&:hover {
+	// 		opacity: 0.7;
+	// 	}
+	// }
 }
 
 .card-advertising__title {
@@ -416,6 +433,10 @@ h4 {
 	display: flex;
 	justify-content: space-between;
 	margin-bottom: 15px;
+
+	.tabs-block__items {
+		width: 100%;
+	}
 }
 
 .text-info__tabs .tabs-block__nav {
@@ -512,6 +533,13 @@ h4 {
 	border: 0.5px solid #d9000d;
 	overflow: hidden;
 	padding: 10px 16px;
+	transition: all 0.3s ease 0s;
+
+	@media (any-hover: hover) {
+		&:hover {
+			opacity: 0.7;
+		}
+	}
 }
 
 .scoreboard__text {
@@ -529,6 +557,13 @@ h4 {
 	justify-content: space-between;
 	padding: 3px 0;
 	border-bottom: 0.5px solid #8c8b8b;
+	transition: all 0.3s ease 0s;
+
+	@media (any-hover: hover) {
+		&:hover {
+			opacity: 0.7;
+		}
+	}
 
 	&:last-child {
 		border-bottom: none;
